--- a/03-jquery-ui-ejercicios/seccion22-jquery-ui-conceptos/59-jquery-ui-conceptos-version-1.11.2/index.html
+++ b/03-jquery-ui-ejercicios/seccion22-jquery-ui-conceptos/59-jquery-ui-conceptos-version-1.11.2/index.html
@@ -14,14 +14,83 @@
     <!--  **********  Favicon  **********  -->
     <link rel="icon" href="../../assets/favicon/jquery-icon.png">
 
-    <!--  **********  Libreria de Estilos  **********  -->
-    <link rel="stylesheet" href="../../assets/css/styles.css">
-
     <!--  **********  Librerías de jQuery y jQuery UI  **********  -->
     <script src="../../assets/js/jquery-1.9.1.js"> </script>
     <link rel="stylesheet" href="../../assets/css/ui-darkness-1.11.2/jquery-ui.min.css">
     <script src="../../assets/js/jquery-ui-1.11.2.min.js"> </script>
 
+
+    <style>
+        body {
+            background: linear-gradient(to bottom, #e7e7c1, #948a8a, #fafafa);
+        }
+
+        .header {
+            width: 100%;
+            height: 10vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            border: 1px solid green;
+        }
+
+        .main {
+            width: 100%;
+            height: 85vh;
+            display: flex;
+            flex-direction: column;
+            flex-wrap: wrap;
+            /* justify-content: center; */
+            align-items: center;
+            gap: 10px;
+            padding-top: 50px;
+            font-size: 16px;
+            font-weight: bold;
+        }
+
+
+        .botones {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            gap: 20px;
+        }
+
+
+        .input {
+            width: 200px;
+            height: 20px;
+        }
+
+
+        /*  *****  Estilos mas especificos  *****  */
+        .conceptos {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 20px;
+            width: 450px;
+            padding: 10px;
+            border: 5px solid blue;
+            background-color: lightblue;
+        }
+
+        .ui-button .mi-icono {
+            background-image: url(../../assets/imagenes/iconos/European-Union.png) !important;
+            width: 16px;
+            height: 16px;
+            background-position: 0px 0px;
+        }
+
+        .ui-button .ui-state-hover .mi-icono {
+            background-image: url(../../assets/imagenes/iconos/Nordic-Council.png) !important;
+            width: 16px;
+            height: 16px;
+            background-position: 0px 0px;
+        }
+    </style>
 
 </head>
 
@@ -43,7 +112,7 @@
         <br>
 
         <button> Bienvenido </button>
-        
+
         <br> <br>
         <div class="conceptos"> 10. Modificaciones de la Version jQuery UI 1.12. </div>
         <br>
@@ -64,7 +133,7 @@
             $("button").button();
 
 
-            $("button").click(function() {
+            $("button").click(function () {
                 alert('Bienvenido a la Version 1.11.2 de jQuery UI');
             })
 
