Add - sección 30 - jQuery UI - widget botones

--- a/03-jquery-ui-ejercicios/change-theme-jquery-ui.html
+++ b/03-jquery-ui-ejercicios/change-theme-jquery-ui.html
@@ -11,7 +11,7 @@
         left: 20px;
     }
     
-    button {
+    .boton-ui {
         width: 150px;
         font-size: 12px;
         font-weight: bold;
@@ -24,7 +24,7 @@
         transition: all 300ms ease-in-out;
     }
 
-    button:hover {
+    .boton-ui:hover {
         background-color: rgb(69, 8, 126);
     }
 
@@ -152,31 +152,31 @@
 
 <div class="btn-container">
 
-    <button id="to-lightness" class="active"> lightness </button> 
-    <button id="to-darkness"> darkness </button>
-    <button id="to-base"> base </button>
-    <button id="to-black-tie"> black-tie </button>
-    <button id="to-blitzer"> blitzer </button>
-    <button id="to-cupertino"> cupertino </button>
-    <button id="to-dark-hive"> dark-hive </button>
-    <button id="to-dot-luv"> dot-luv </button>
-    <button id="to-eggplant"> eggplant </button>
-    <button id="to-excite-bike"> excite-bike </button>
-    <button id="to-flick"> flick </button>
-    <button id="to-hot-sneack"> hot-sneack </button>
-    <button id="to-humanity"> humanity </button>
-    <button id="to-le-frog"> le-frog </button>
-    <button id="to-mint-choc"> mint-choc </button>
-    <button id="to-overcast"> overcast </button>
-    <button id="to-pepper-grinder"> pepper-grinder </button>
-    <button id="to-redmond"> redmond </button>
-    <button id="to-smoothness"> smoothness </button>
-    <button id="to-south-street"> south-street </button>
-    <button id="to-start"> start </button>
-    <button id="to-sunny"> sunny </button>
-    <button id="to-swanky-purse"> swanky-purse </button>
-    <button id="to-trontastic"> trontastic </button>
-    <button id="to-vader"> vader </button>
+    <button id="to-lightness" class="boton-ui active"> lightness </button> 
+    <button id="to-darkness" class="boton-ui"> darkness </button>
+    <button id="to-base" class="boton-ui"> base </button>
+    <button id="to-black-tie" class="boton-ui"> black-tie </button>
+    <button id="to-blitzer" class="boton-ui"> blitzer </button>
+    <button id="to-cupertino" class="boton-ui"> cupertino </button>
+    <button id="to-dark-hive" class="boton-ui"> dark-hive </button>
+    <button id="to-dot-luv" class="boton-ui"> dot-luv </button>
+    <button id="to-eggplant" class="boton-ui"> eggplant </button>
+    <button id="to-excite-bike" class="boton-ui"> excite-bike </button>
+    <button id="to-flick" class="boton-ui"> flick </button>
+    <button id="to-hot-sneack" class="boton-ui"> hot-sneack </button>
+    <button id="to-humanity" class="boton-ui"> humanity </button>
+    <button id="to-le-frog" class="boton-ui"> le-frog </button>
+    <button id="to-mint-choc" class="boton-ui"> mint-choc </button>
+    <button id="to-overcast" class="boton-ui"> overcast </button>
+    <button id="to-pepper-grinder" class="boton-ui"> pepper-grinder </button>
+    <button id="to-redmond" class="boton-ui"> redmond </button>
+    <button id="to-smoothness" class="boton-ui"> smoothness </button>
+    <button id="to-south-street" class="boton-ui"> south-street </button>
+    <button id="to-start" class="boton-ui"> start </button>
+    <button id="to-sunny" class="boton-ui"> sunny </button>
+    <button id="to-swanky-purse" class="boton-ui"> swanky-purse </button>
+    <button id="to-trontastic" class="boton-ui"> trontastic </button>
+    <button id="to-vader" class="boton-ui"> vader </button>
 
 </div>
 
