Add - sección 31 - jQuery UI - widget datepicker

--- a/03-jquery-ui-ejercicios/change-theme-jquery-ui-v2.html
+++ b/03-jquery-ui-ejercicios/change-theme-jquery-ui-v2.html
@@ -6,10 +6,10 @@
     
     .btn-container {
         width: 200px;
-        position: absolute;
+        /* position: absolute;
         top: 20px;
         top: 115px;
-        left: 20px;
+        left: 20px; */
     }
     
     .boton-ui {
