--- a/03-jquery-ui-ejercicios/seccion30-jquery-ui-widget-botones/73-widget-controlgroup/index.html
+++ b/03-jquery-ui-ejercicios/seccion30-jquery-ui-widget-botones/73-widget-controlgroup/index.html
@@ -103,7 +103,7 @@
     <!--  **********  Header o Cabecera  **********  -->
     <header class="header">
 
-        <h1> Seccion 30 - Widget Widget Control Group - jQuery UI. </h1>
+        <h1> Seccion 30 - Widget Control Group - jQuery UI. </h1>
         <hr>
 
     </header>
