--- a/03-jquery-ui-ejercicios/seccion30-jquery-ui-widget-botones/74-widget-checkboxradio/index.html
+++ b/03-jquery-ui-ejercicios/seccion30-jquery-ui-widget-botones/74-widget-checkboxradio/index.html
@@ -101,7 +101,7 @@
     <!--  **********  Header o Cabecera  **********  -->
     <header class="header">
 
-        <h1> Seccion 30 - Widget Widget Widget Check Box Radio - jQuery UI. </h1>
+        <h1> Seccion 30 - Widget Check Box Radio - jQuery UI. </h1>
         <hr>
 
     </header>
