Add - sección 32 - jQuery UI - widget dialog

--- a/03-jquery-ui-ejercicios/seccion31-jquery-ui-widget-datapicker/76-widget-datapicker-formatos/index.html
+++ b/03-jquery-ui-ejercicios/seccion31-jquery-ui-widget-datapicker/76-widget-datapicker-formatos/index.html
@@ -1,6 +1,6 @@
 <!--  ************************************************************************************  -->
 <!--  **********  /01-todo-jquery-de-novato-a-experto/03-jquery-ui-ejercicios/  **********  -->
-<!--  **********  /seccion31-jquery-ui-widget-botones/  **********************************  -->
+<!--  **********  /seccion31-jquery-ui-widget-datepicker/  *******************************  -->
 <!--  **********  /76-jquery-ui-widget-datepicker-formatos/index.html  *******************  -->
 <!--  ************************************************************************************  -->
 
