--- a/03-jquery-ui-ejercicios/seccion31-jquery-ui-widget-datapicker/79-widget-datapicker-onclose-defaultdate/index.html
+++ b/03-jquery-ui-ejercicios/seccion31-jquery-ui-widget-datapicker/79-widget-datapicker-onclose-defaultdate/index.html
@@ -1,6 +1,6 @@
 <!--  **************************************************************************************  -->
 <!--  **********  /01-todo-jquery-de-novato-a-experto/03-jquery-ui-ejercicios/  ************  -->
-<!--  **********  /seccion31-jquery-ui-widget-botones/  ************************************  -->
+<!--  **********  /seccion31-jquery-ui-widget-datepicker/  *********************************  -->
 <!--  **********  /79-jquery-ui-widget-datepicker-onclose-defaultdate/index.html  **********  -->
 <!--  **************************************************************************************  -->
 
