--- a/03-jquery-ui-ejercicios/seccion30-jquery-ui-widget-botones/73-widget-controlgroup/index.html
+++ b/03-jquery-ui-ejercicios/seccion30-jquery-ui-widget-botones/73-widget-controlgroup/index.html
@@ -28,57 +28,75 @@
 
 
     <style>
+        
+        * {
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+        }
+
         body {
+            background: linear-gradient(to bottom, #e7e7c1, #948a8a, #fafafa);
+            display: grid;
+            height: 850px;
+            grid-template-areas:
+                'cabecera  cabecera '
+                'lateral   contenido '
+            ;
+            grid-template-columns: 250px auto;
+            grid-template-rows: 10vh auto;
+        }
+
+        .cabecera {
+            grid-area: cabecera;
+            width: 100%;
+            /* height: 10vh; */
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            border: 5px solid green;
+        }
+
+        h1 {
+            font-size: 56px;
+            color: #FCF7CD;
+            -webkit-text-stroke-width: 3px;
+            -webkit-text-stroke-color: #FFA500;
+            text-align: center;
+        }
+
+
+        .lateral {
+            grid-area: lateral;
+            padding: 20px;
             background: linear-gradient(to bottom, #e7e7c1, #948a8a, #fafafa);
         }
 
-        .header {
+        .contenido {
+            grid-area: contenido;
             width: 100%;
-            height: 10vh;
+            height: 830px; 
             display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            flex-grow: 1;
-            border: 1px solid green;
-        }
-
-        .main {
-            width: 100%;
-            height: 800px;
-            position: relative;
-            overflow: hidden;
-            display: flex;
-            flex-direction: column;
+            flex-direction: row;
             flex-wrap: wrap;
-            /* justify-content: center; */
-            align-items: center;
-            gap: 50px;
+            justify-content: center;
+            /* align-items: center; */
+            gap: 20px;
+            padding-bottom: 100px;
             flex-grow: 1;
             font-size: 16px;
             font-weight: bold;
-        }
-
-
-        .botones {
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            gap: 20px;
-        }
-
-
-        .input {
-            width: 200px;
-            height: 20px;
+            background: linear-gradient(to bottom, #e7e7c1, #948a8a, #fafafa);
         }
 
 
         /*  *****  Estilos mas especificos  *****  */
 
         .ejercicio {
-            /* width: 50%; */
-            height: 100px;
+            width: 80%;
+            height: 80%;
+            margin-top: 100px;
             padding: 50px;
             padding-bottom: 100px;
             display: flex;
@@ -101,19 +119,19 @@
 <body>
 
     <!--  **********  Header o Cabecera  **********  -->
-    <header class="header">
+    <header class="cabecera">
 
         <h1> Seccion 30 - Widget Control Group - jQuery UI. </h1>
         <hr>
 
     </header>
 
+    <!-- -----  SELECTOR DE TEMA  ----- -->
+    <aside class="lateral" id="change-theme"> </aside>
+
+
     <!--  **********  Contenido  **********  -->
-    <main class="main">
-
-
-        <!-- -----  SELECTOR DE TEMA  ----- -->
-        <section id="change-theme"> </section>
+    <main class="contenido">
 
         <!--  -----  Contenedor de los Ejercicios  -----  -->
         <section class="ejercicio">
