--- a/03-jquery-ui-ejercicios/seccion30-jquery-ui-widget-botones/71-widget-botones/index.html
+++ b/03-jquery-ui-ejercicios/seccion30-jquery-ui-widget-botones/71-widget-botones/index.html
@@ -213,7 +213,7 @@
 
 
             //  -----  SELECTOR DE TEMA  -----
-            $("#change-theme").load("../../change-theme-jquery-ui.html");
+            $("#change-theme").load("../../change-theme-jquery-ui-v2.html");
 
 
             //  -----  WIDGET BOTONES  -----
