--- a/03-jquery-ui-ejercicios/seccion30-jquery-ui-widget-botones/73-widget-controlgroup/index.html
+++ b/03-jquery-ui-ejercicios/seccion30-jquery-ui-widget-botones/73-widget-controlgroup/index.html
@@ -182,7 +182,7 @@
 
 
             //  -----  SELECTOR DE TEMA  -----
-            $("#change-theme").load("../../change-theme-jquery-ui.html");
+            $("#change-theme").load("../../change-theme-jquery-ui-v2.html");
 
 
             //  -----  WIDGET SELECT MENÚ  -----
