--- a/03-jquery-ui-ejercicios/seccion25-jquery-ui-iteracion-resizable/63-iteracion-resizable/index.html
+++ b/03-jquery-ui-ejercicios/seccion25-jquery-ui-iteracion-resizable/63-iteracion-resizable/index.html
@@ -22,41 +22,73 @@
     
     
     <!-- -----  jQuery UI 1.14.1 para que funcione resizable con id resizable  ----- -->
+    <link rel="stylesheet" id="theme" href="../../assets/css/themes/ui-lightness/jquery-ui.min.css">
     <script src="../../assets/jquery-ui-1.14.1.custom/external/jquery/jquery.js"> </script>
-    <link rel="stylesheet" href="../../assets/jquery-ui-1.14.1.custom/jquery-ui.min.css">
     <script src="../../assets/jquery-ui-1.14.1.custom/jquery-ui.min.js"> </script>
 
 
     <style>
-        body {
-            background: linear-gradient(to bottom, #e7e7c1, #948a8a, #fafafa);
+        * {
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
         }
 
-        .header {
+        body {
+            background: linear-gradient(to bottom, #e7e7c1, #948a8a, #fafafa);
+            display: grid;
+            height: 850px;
+            grid-template-areas:
+                'cabecera  cabecera '
+                'lateral   contenido '
+            ;
+            grid-template-columns: 250px auto;
+            grid-template-rows: 10vh auto;
+        }
+
+        .cabecera {
+            grid-area: cabecera;
             width: 100%;
-            height: 10vh;
+            /* height: 10vh; */
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            border: 1px solid green;
+            border: 5px solid green;
         }
 
-        .main {
+        h1 {
+            font-size: 56px;
+            color: #FCF7CD;
+            -webkit-text-stroke-width: 3px;
+            -webkit-text-stroke-color: #FFA500;
+            text-align: center;
+        }
+
+
+        .lateral {
+            grid-area: lateral;
+            padding: 20px;
+            background: linear-gradient(to bottom, #e7e7c1, #948a8a, #fafafa);
+        }
+
+        .contenido {
+            grid-area: contenido;
             width: 100%;
-            height: 85vh;
-            overflow: hidden;
+            height: 1000px;
             display: flex;
             flex-direction: row;
             flex-wrap: wrap;
-            justify-content: space-around;
+            justify-content: center;
             /* align-items: center; */
             gap: 50px;
-            padding-top: 50px;
+            padding-top: 100px;
+            padding-bottom: 100px;
+            flex-grow: 1;
             font-size: 16px;
             font-weight: bold;
+            background: linear-gradient(to bottom, #e7e7c1, #948a8a, #fafafa);
         }
-
 
         .botones {
             display: flex;
@@ -65,12 +97,10 @@
             gap: 20px;
         }
 
-
         .input {
             width: 200px;
             height: 20px;
         }
-
 
         /*  *****  Estilos mas especificos  *****  */
 
@@ -122,15 +152,19 @@
 <body>
 
     <!--  **********  Header o Cabecera  **********  -->
-    <header class="header">
+    <header class="cabecera">
 
         <h1> Seccion 25 - Iteración Resizable - jQuery UI. </h1>
         <hr>
 
     </header>
 
+
+    <!-- -----  SELECTOR DE TEMA  ----- -->
+     <aside class="lateral" id="change-theme"> </aside>
+
     <!--  **********  Contenido  **********  -->
-    <main class="main">
+    <main class="contenido">
 
         <div id="foto"> </div>
 
@@ -152,6 +186,9 @@
             //console.warn('----------  Documento Cargado!!!  ----- ', 'CDN Google - jQuery version:', $.fn.jquery, ' ----------', '\n');
             console.warn('----------  Documento Cargado!!!  ----- ', 'jQuery version:', $.fn.jquery, ' ----------', '\n');
 
+
+            //  -----  SELECTOR DE TEMA  -----
+            $("#change-theme").load("../../change-theme-jquery-ui-v2.html");
 
             //  -----  RESIZABLE  -----
 
