--- a/03-jquery-ui-ejercicios/seccion27-jquery-ui-sortable/65-iteracion-sortable/index.html
+++ b/03-jquery-ui-ejercicios/seccion27-jquery-ui-sortable/65-iteracion-sortable/index.html
@@ -15,9 +15,8 @@
     <link rel="icon" href="../../assets/favicon/jquery-icon.png">
 
     <!--  **********  Librerías de jQuery y jQuery UI  **********  -->
-
+    <link rel="stylesheet" id="theme" href="../../assets/css/themes/ui-lightness/jquery-ui.min.css">
     <script src="../../assets/js/jquery-1.9.1.js"> </script>
-    <link rel="stylesheet" href="../../assets/css/ui-lightness/jquery-ui-1.10.1.custom.min.css">
     <script src="../../assets/js/jquery-ui-1.10.1.custom.min.js"> </script>
 
 
@@ -28,35 +27,67 @@
 
 
     <style>
-        body {
-            background: linear-gradient(to bottom, #e7e7c1, #948a8a, #fafafa);
+        * {
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
         }
 
-        .header {
+        body {
+            background: linear-gradient(to bottom, #e7e7c1, #948a8a, #fafafa);
+            display: grid;
+            height: 850px;
+            grid-template-areas:
+                'cabecera  cabecera '
+                'lateral   contenido '
+            ;
+            grid-template-columns: 250px auto;
+            grid-template-rows: 10vh auto;
+        }
+
+        .cabecera {
+            grid-area: cabecera;
             width: 100%;
-            height: 10vh;
+            /* height: 10vh; */
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            border: 1px solid green;
+            border: 5px solid green;
         }
 
-        .main {
+        h1 {
+            font-size: 56px;
+            color: #FCF7CD;
+            -webkit-text-stroke-width: 3px;
+            -webkit-text-stroke-color: #FFA500;
+            text-align: center;
+        }
+
+
+        .lateral {
+            grid-area: lateral;
+            padding: 20px;
+            background: linear-gradient(to bottom, #e7e7c1, #948a8a, #fafafa);
+        }
+
+        .contenido {
+            grid-area: contenido;
             width: 100%;
-            height: 85vh;
-            overflow: hidden;
+            height: 1000px;
             display: flex;
             flex-direction: row;
             flex-wrap: wrap;
             justify-content: center;
             /* align-items: center; */
             gap: 50px;
-            padding-top: 50px;
+            padding-top: 100px;
+            padding-bottom: 100px;
+            flex-grow: 1;
             font-size: 16px;
             font-weight: bold;
+            background: linear-gradient(to bottom, #e7e7c1, #948a8a, #fafafa);
         }
-
 
         .botones {
             display: flex;
@@ -64,7 +95,6 @@
             justify-content: center;
             gap: 20px;
         }
-
 
         .input {
             width: 200px;
@@ -127,15 +157,20 @@
 <body>
 
     <!--  **********  Header o Cabecera  **********  -->
-    <header class="header">
+    <header class="cabecera">
 
         <h1> Seccion 27 - Iteración Sortable - jQuery UI. </h1>
         <hr>
 
     </header>
 
+
+    <!-- -----  SELECTOR DE TEMA  ----- -->
+    <aside class="lateral" id="change-theme"> </aside>
+
+
     <!--  **********  Contenido  **********  -->
-    <main class="main">
+    <main class="contenido">
 
         <ul>
             <li> Zeus </lilass=>
@@ -182,6 +217,10 @@
             console.warn('----------  Documento Cargado!!!  ----- ', 'jQuery version:', $.fn.jquery, ' ----------', '\n');
 
 
+            //  -----  SELECTOR DE TEMA  -----
+            $("#change-theme").load("../../change-theme-jquery-ui-v2.html");
+
+
             //  -----  SORTABLE  -----
 
             $("ul").sortable();
@@ -190,7 +229,7 @@
 
         });
 
-        
+
     </script>
 
 </body>
