--- a/03-jquery-ui-ejercicios/seccion22-jquery-ui-conceptos/59-jquery-ui-conceptos-version-1.11.2/index.html
+++ b/03-jquery-ui-ejercicios/seccion22-jquery-ui-conceptos/59-jquery-ui-conceptos-version-1.11.2/index.html
@@ -15,40 +15,73 @@
     <link rel="icon" href="../../assets/favicon/jquery-icon.png">
 
     <!--  **********  Librerías de jQuery y jQuery UI  **********  -->
+    <link rel="stylesheet" id="theme" href="../../assets/css/themes/ui-lightness/jquery-ui.min.css">
     <script src="../../assets/js/jquery-1.9.1.js"> </script>
-    <link rel="stylesheet" href="../../assets/css/ui-darkness-1.11.2/jquery-ui.min.css">
     <script src="../../assets/js/jquery-ui-1.11.2.min.js"> </script>
 
 
     <style>
-        body {
-            background: linear-gradient(to bottom, #e7e7c1, #948a8a, #fafafa);
+        * {
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
         }
 
-        .header {
+        body {
+            background: linear-gradient(to bottom, #e7e7c1, #948a8a, #fafafa);
+            display: grid;
+            height: 850px;
+            grid-template-areas:
+                'cabecera  cabecera '
+                'lateral   contenido '
+            ;
+            grid-template-columns: 250px auto;
+            grid-template-rows: 10vh auto;
+        }
+
+        .cabecera {
+            grid-area: cabecera;
             width: 100%;
-            height: 10vh;
+            /* height: 10vh; */
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            border: 1px solid green;
+            border: 5px solid green;
         }
 
-        .main {
+        h1 {
+            font-size: 56px;
+            color: #FCF7CD;
+            -webkit-text-stroke-width: 3px;
+            -webkit-text-stroke-color: #FFA500;
+            text-align: center;
+        }
+
+
+        .lateral {
+            grid-area: lateral;
+            padding: 20px;
+            background: linear-gradient(to bottom, #e7e7c1, #948a8a, #fafafa);
+        }
+
+        .contenido {
+            grid-area: contenido;
             width: 100%;
-            height: 85vh;
+            height: 800px;
             display: flex;
             flex-direction: column;
             flex-wrap: wrap;
             /* justify-content: center; */
             align-items: center;
-            gap: 10px;
+            gap: 20px;
             padding-top: 50px;
+            flex-grow: 1;
             font-size: 16px;
             font-weight: bold;
+            background: linear-gradient(to bottom, #e7e7c1, #948a8a, #fafafa);
+            background: black;
         }
-
 
         .botones {
             display: flex;
@@ -56,7 +89,6 @@
             justify-content: center;
             gap: 20px;
         }
-
 
         .input {
             width: 200px;
@@ -71,7 +103,7 @@
             justify-content: center;
             align-items: center;
             height: 20px;
-            width: 450px;
+            width: 500px;
             padding: 10px;
             border: 5px solid blue;
             background-color: lightblue;
@@ -90,6 +122,10 @@
             height: 16px;
             background-position: 0px 0px;
         }
+
+        button {
+            width: 200px;
+        }
     </style>
 
 </head>
@@ -97,15 +133,20 @@
 <body>
 
     <!--  **********  Header o Cabecera  **********  -->
-    <header class="header">
+    <header class="cabecera">
 
         <h1> Seccion 22 - Conceptos de jQuery UI - Version 1.11.2 </h1>
         <hr>
 
     </header>
 
+
+    <!-- -----  SELECTOR DE TEMA  ----- -->
+    <aside class="lateral" id="change-theme"> </aside>
+
+
     <!--  **********  Contenido  **********  -->
-    <main class="main">
+    <main class="contenido">
 
         <br> <br>
         <div class="conceptos"> 9. Modificaciones de la Version jQuery UI 1.11.2. </div>
@@ -128,6 +169,9 @@
             //console.warn('----------  Documento Cargado!!!  ----- ', 'CDN Google - jQuery version:', $.fn.jquery, ' ----------', '\n');
             console.warn('----------  Documento Cargado!!!  ----- ', 'jQuery version:', $.fn.jquery, ' ----------', '\n');
 
+
+            //  -----  SELECTOR DE TEMA  -----
+            $("#change-theme").load("../../change-theme-jquery-ui-v2.html");
 
             //  ----------  jQuery UI Version 1.11.2  ----------
             $("button").button();
