--- a/03-jquery-ui-ejercicios/seccion38-manejo-de-tooltips/87-tooltips/index.html
+++ b/03-jquery-ui-ejercicios/seccion38-manejo-de-tooltips/87-tooltips/index.html
@@ -125,20 +125,24 @@
         .ejercicio {
             /* width: 60%; */
             /* height: 50px; */
-            padding: 80px;
+            padding: 20px;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            /* gap: 20px; */
+            gap: 20px; 
             margin-bottom: 20px;
             background-color: #B0A99C;
             text-align: center;
         }
 
-        #tabs {
-            width: 800px;
-            margin: 0 auto;
+        a {
+            padding: 10px 20px;
+            font-size: 24px;
+            font-weight: bold;
+            text-decoration: none;
+            color: #ddd;
+            background-color: #FFA500;
         }
     </style>
 
@@ -166,11 +170,10 @@
         <!--  -----  Contenedor de los Ejercicios del Manejo de Tooltips  -----  -->
         <section class="ejercicio">
 
-            <label for="nombre">Nombre:</label>
-            <input type="text" title="Escriba su nombre" id="nombre" name="nombre" />
-            <a href="#" title="Entre a la siguiente pàgina para registrarse">Registro</a>
-            <br>
-            <img src="../../assets/imagenes/afrodita2.jpg" title="La venus del espejo, Velazquez" />
+            <a href="#" title="Zeus, Dios de los Dioses"> Zeus</a>
+            <img src="../../assets/imagenes/afrodita.jpg" title="Afrodita, Diosa del Amor">
+            <input type="date" title="Formato DD/MM/AA">
+            
 
         </section>
 
