Add - sección 40 - jQuery UI -Cambio de temas en los widgets y - TERMINADO JQUERY UI

--- a/03-jquery-ui-ejercicios/seccion40-cambiador-temas-en-widgets/91-cambiador-temas-widget/index.html
+++ b/03-jquery-ui-ejercicios/seccion40-cambiador-temas-en-widgets/91-cambiador-temas-widget/index.html
@@ -1,7 +1,7 @@
 <!--  ************************************************************************************  -->
 <!--  **********  /01-todo-jquery-de-novato-a-experto/03-jquery-ui-ejercicios/  **********  -->
-<!--  **********  /seccion37-jquery-ui-widget-tabs/  *************************************  -->
-<!--  **********  /86-widget-tabs/index.html  ********************************************  -->
+<!--  **********  /seccion40-jquery-ui-cambiador-temas-en-widget/  ***********************  -->
+<!--  **********  /91-cambiador-temas-widget/index.html  *********************************  -->
 <!--  ************************************************************************************  -->
 
 
@@ -10,7 +10,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title> jQuery UI - Seccion 37 - Widget Tabs o Tabuladores - jQuery UI </title>
+    <title> jQuery UI - Seccion 40 - Cambio Temas en Widget - jQuery UI </title>
 
     <!--  **********  Favicon  **********  -->
     <link rel="icon" href="../../assets/favicon/jquery-icon.png">
@@ -176,6 +176,7 @@
         }
     </style>
 
+
 </head>
 
 
@@ -184,7 +185,7 @@
     <!--  **********  Header o Cabecera  **********  -->
     <header class="cabecera">
 
-        <h1> Seccion 37 - Widget Tabs o Tabuladores - jQuery UI. </h1>
+        <h1> Seccion 40 - Cambio Temas en Widget - jQuery UI. </h1>
         <hr>
 
     </header>
@@ -196,6 +197,8 @@
 
     <!--  **********  Contenido  **********  -->
     <main class="contenido">
+
+        <!--  -----  Contenedor de los Ejercicios del Manejo de Temas en Widget  -----  -->
 
 
         <!--  -----  Contenedor del Ejercicio del Widget Tab  -----  -->
@@ -350,7 +353,8 @@
                 stop: function () {
                     tabSorteable.tabs('refresh');
                 }
-            });
+            })
+
 
         });
 
