Add - jQuery Mobile - Sección 44 - Acordeones y Listas Colapsables - Crear Estructura

--- a/04-jquery-mobile-ejercicios/seccion44-jquery-mobile-acordeones-y-listas-colapsables/0308-ListTheme/listview-temas.html
+++ b/04-jquery-mobile-ejercicios/seccion44-jquery-mobile-acordeones-y-listas-colapsables/0308-ListTheme/listview-temas.html
@@ -21,7 +21,7 @@ data-divider-theme="b">
 	<li data-role="list-divider">Diosas</li>
 	<li data-icon="info">
     <a href="#">
-    <img src="../imagenes/afrodita.fw.png" alt="afrodita">
+    <img src="../../assets/imagenes/afrodita.fw.png" alt="afrodita">
     <h2>Afrodita</h2>
     <p>Diosa del amor y la lujuria</p>
     <p class="ui-li-aside">6:30</p>
@@ -29,7 +29,7 @@ data-divider-theme="b">
     <a href="http://es.wikipedia.org/wiki/afrodita" data-rel="popup" data-position-to="window" data-transition="pop">wiki</a>
     </li>
     <li data-icon="info"><a href="#">
-    <img src="../imagenes/artemisa.fw.png"  alt="Artemisa">
+    <img src="../../assets/imagenes/artemisa.fw.png"  alt="Artemisa">
     <h2>Artemisa</h2>
     <p>Diosa de la cacería</p>
     </a>
@@ -37,28 +37,28 @@ data-divider-theme="b">
     </li data-icon="info">
     <li data-role="list-divider">Dioses</li>
     <li data-icon="info"><a href="#">
-    <img src="../imagenes/hades.fw.png"  alt="Hades">
+    <img src="../../assets/imagenes/hades.fw.png"  alt="Hades">
     <h2>Hades</h2>
     <p>Dios del inframundo</p>
     </a>
     <a href="http://es.wikipedia.org/wiki/hades" data-rel="popup" data-position-to="window" data-transition="pop">wiki</a>
     </li>
     <li data-icon="info"><a href="#">
-    <img src="../imagenes/hercules.fw.png"  alt="Hércules">
+    <img src="../../assets/imagenes/hercules.fw.png"  alt="Hércules">
     <h2>Hércules</h2>
     <p>Semidios, hijo de Zeus</p>
     </a>
     <a href="http://es.wikipedia.org/wiki/hercules" data-rel="popup" data-position-to="window" data-transition="pop">wiki</a>
     </li>
     <li data-icon="info"><a href="#">
-    <img src="../imagenes/poseidon.fw.png"  alt="Poseidón">
+    <img src="../../assets/imagenes/poseidon.fw.png"  alt="Poseidón">
     <h2>Poseidón</h2>
     <p>Dios de los mares</p>
     </a>
     <a href="http://es.wikipedia.org/wiki/poseidon" data-rel="popup" data-position-to="window" data-transition="pop">wiki</a>
     </li>
     <li data-icon="info"><a href="#">
-    <img src="../imagenes/zeus.fw.png"  alt="Zeus">
+    <img src="../../assets/imagenes/zeus.fw.png"  alt="Zeus">
     <h2>Zeus</h2>
     <p>Dios de los dioses</p>
     </a>
