--- a/04-jquery-mobile-ejercicios/seccion43-jquery-mobile-manejo-de-listas/95-jquery-mobile-listas/index.html
+++ b/04-jquery-mobile-ejercicios/seccion43-jquery-mobile-manejo-de-listas/95-jquery-mobile-listas/index.html
@@ -1,6 +1,6 @@
 <!--  ****************************************************************************************  -->
 <!--  **********  /01-todo-jquery-de-novato-a-experto/04-jquery-mobile-ejercicios/  **********  -->
-<!--  **********  /seccion42-jquery-mobile-listas/  ******************************************  -->
+<!--  **********  /seccion43-jquery-mobile-listas/  ******************************************  -->
 <!--  **********  /94-jquery-mobile-listas/index.html  ***************************************  -->
 <!--  ****************************************************************************************  -->
 
@@ -11,7 +11,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> jQuery Mobile - Seccion 42 - Botones y Toolbars - jQuery Mobile </title>
+    <title> jQuery Mobile - Seccion 43 - Manejo de Listas - jQuery Mobile </title>
 
     <!--  **********  Favicon  **********  -->
     <link rel="icon" href="../../assets/favicon/jquery-icon.png">
